# adaptive-scheduler

./: .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  AUTHORS.md  LICENSE  LLM_FEATURE_PLAN.md  MANIFEST.in  README.md  README.rst  RELEASE.md  azure-pipelines.yml  conda-environment.py  environment.yml  example.ipynb  ipynb_filter.py  pyproject.toml  readthedocs.yml  real_test.py  real_test_unmocked.py  release-notes.md  requirements.txt  setup.cfg  setup.py  slurm.ipynb
.devcontainer/: Dockerfile  devcontainer.json  micromamba.Dockerfile  slurm.conf
.github/: update-environment.py
.github/workflows/: codeql.yml  pytest.yml  pythonpublish.yml  release-drafter.yaml  update-environment.yaml  update-readme.yml
adaptive/scheduler/: __init__.py  client_support.py  server_support.py  slurm.py
adaptive_scheduler/: __init__.py  _cross_cluster_executor.py  _executor.py  _llm_anywidget.py  _llm_widgets.py  _mock_scheduler.py  _scheduler.py  _version.py  client_support.py  mcp_server.py  mock_scheduler.py  pbs.py  run_script.py.j2  scheduler.py  sequence_learner.py  server_support.py  slurm.py  utils.py  widgets.py
adaptive_scheduler/_scheduler/: base.py  base_scheduler.py  common.py  local.py  pbs.py  slurm.py
adaptive_scheduler/_server_support/: __init__.py  base_manager.py  common.py  database_manager.py  job_manager.py  kill_manager.py  launcher.py  llm_manager.py  logging.py  multi_run_manager.py  parse_logs.py  run_manager.py  run_script.py  run_script.py.j2  slurm_run.py
docs/: diagram.d2  environment.yml
docs/source/: FAQ.md  FAQ.rst  conf.py  index.md  index.rst
docs/source/reference/: adaptive_scheduler._mock_scheduler.rst  adaptive_scheduler.client_support.rst  adaptive_scheduler.pbs.rst  adaptive_scheduler.rst  adaptive_scheduler.scheduler.rst  adaptive_scheduler.server_support.rst  adaptive_scheduler.slurm.rst  adaptive_scheduler.utils.rst
tests/: __init__.py  conftest.py  helpers.py  test_base_scheduler.py  test_chat_widget.py  test_chat_widget_fixes.py  test_client_support.py  test_cross_cluster_executor.py  test_database_manager.py  test_job_manager.py  test_kill_manager.py  test_launcher.py  test_llm_anywidget.py  test_llm_manager.py  test_log_generation.py  test_log_parsing.py  test_multi_run_manager.py  test_multi_thread_support.py  test_run_manager.py  test_run_script.py  test_server_support.py  test_server_support_common.py  test_slurm_executor.py  test_slurm_run.py  test_slurm_scheduler.py  test_utils.py  test_utils_file_creation_progress.py  test_widgets.py
